--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   gtag('config', 'G-2C4H4NSCJN');
 </script>
 <!-- ads -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6990684094866210"
+     crossorigin="anonymous"></script>
 
 
 
@@ -153,6 +154,41 @@
       </div><!-- end col-9 -->
 
 
+div class="col-md-2 ">
+        <div align="center"> 
+            <div style="color: white;"><h3>Hot Game</h3></div>
+        <hr />
+
+            <div class="col-lg-12 col-md-4 col-6 list-grid">
+              <a  title="Retro Bowl" href="/play/retro-bowl.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://abinbins.github.io/thumb/retro-bowl.png" data-src="https://abinbins.github.io/thumb/retro-bowl.png" class="small-thumb img-rounded lazyload" alt="retro bowl unblocked"></div>
+                  <div style="color: white;"><strong>Retro Bowls</strong></div>
+                </div>
+              </a>
+            </div>  
+            <br/>
+
+            <div class="col-lg-12 col-md-4 col-6 list-grid">
+              <a  title="Tag" href="/play/smash-karts.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://abinbins.github.io/thumb/smash-karts.png" class="small-thumb img-rounded" alt="Smash Karts unblocked"></div>
+                  <div style="color: white;"><strong>Smash Karts</strong></div>
+                </div>
+              </a>
+            </div>   
+            <br/>
+            <div class="col-lg-12 col-md-4 col-6 list-grid">
+              <a  title="1v1 LOL" href="/play/1v1-lol.html">
+                <div class="list-game">
+                  <div class="list-thumbnail"><img src="https://abinbins.github.io/thumb/1v1-lol.png" class="small-thumb img-rounded" alt="1v1 LOL unblocked"></div>
+                  <div style="color: white;"><strong>1v1 LOL</strong></div>
+                </div>
+              </a>
+            </div>            
+        </div>
+      </div>
+  </div>
 
 
 
