--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div><!-- end col-9 -->
 
 
-div class="col-md-2 ">
+ <div class="col-md-2 ">
         <div align="center"> 
             <div style="color: white;"><h3>Hot Game</h3></div>
         <hr />
