--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!-- ads -->
 
-
+<meta name="monetag" content="a995a00896fa120afa9cc356ac57514d">
 </head>
 	<body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
 		<!-- Navigation-->
