--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 </script>
 <!-- ads -->
 <meta name="monetag" content="a995a00896fa120afa9cc356ac57514d">
+
 </head>
+<script src="https://alwingulla.com/88/tag.min.js" data-zone="56504" async data-cfasync="false"></script>
+
 	<body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-dark top-nav" id="mainNav">
